2020-08-22  James Balamuta  <balamut2@illinois.edu>

	* .github/workflows/R-CMD-check.yaml: Re-enable devel build check by
	using Linux instead of macOS to perform the check

2020-07-24  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.13.0.2

	* NEWS.md: Update for GitHub Actions change

	* .github/workflows/R-CMD-check.yaml: Switched to using reference tags to
	  refer to R release information.
	* .github/.gitignore: Disable HTML from entering staging.

	* README.md: Update build status README badge.

2020-07-23  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.13.0

	* NEWS.md: Update for Ensmallen release 2.13.0

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.13.0
	* inst/include/ensmallen.hpp: ditto

2020-04-23  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.12.1

	* NEWS.md: Update for Ensmallen release 2.12.1

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.12.1
	* inst/include/ensmallen.hpp: ditto

2020-02-19  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.11.3

	* NEWS.md: Update for Ensmallen release 2.11.3

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.11.3
	* inst/include/ensmallen.hpp: ditto

2020-01-14  James Balamuta  <balamut2@illinois.edu>

	* inst/include/RcppEnsmallen.h: Removed header ordering checks

2019-01-13  James Balamuta  <balamut2@illinois.edu>

	* .github/workflows/pr-commands.yaml: Removed as its overly eager.

2020-01-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppEnsmallen.h: Protected header inclusion check

2019-12-30  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.11.1

	* NEWS.md: Update for Ensmallen release 2.11.1

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.11.1
	* inst/include/ensmallen.hpp: ditto

	* .github/workflows/R-CMD-check.yaml: Added github actions for package checks.
